<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:padding="2dp"
        app:title="Login"
        app:titleMarginStart="20dp"
        />
    <LinearLayout
        android:id="@+id/relative_login"
        android:layout_width="380dp"
        android:layout_height="475dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="70dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp">
        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />
        <Button
            android:id="@+id/loginButton2"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:focusable="true" />

        <TextView
            android:id="@+id/resetTXT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/reset_password" />

        <TextView
            android:id="@+id/signupTXT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="@string/signup_txt" />
    </LinearLayout>
</RelativeLayout>
