<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:padding="2dp"
        app:title="Reset Password"
        app:titleMarginStart="20dp"
        />



    <LinearLayout
        android:id="@+id/relative_login"
        android:layout_width="380dp"
        android:layout_height="475dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="70dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/need_email_txt"/>

        <EditText
            android:id="@+id/email3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/resetButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password" />
        <TextView
            android:id="@+id/registeredTXT3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:text="@string/login_again"
            android:textAlignment="center" />



    </LinearLayout>
</RelativeLayout>
